--- a/src/scss/_wvu-masthead__links.scss
+++ b/src/scss/_wvu-masthead__links.scss
@@ -3,18 +3,19 @@
 
 ul.wvu-masthead__links {
   float: right; 
-  margin-top: 6px; 
+  margin: 0;
   padding: 0; 
   
   li { 
-    display: inline; 
-    list-style-type: none;
+    display: inline-block;
+    line-height: 54px; 
+    list-style-type: none; 
     
     a {
       color: #fff;
       float: left;
       margin: 0 2px;
-      padding: 6px 7px;
+      padding: 0px 7px;
       text-decoration: none; 
     }
   }
