namespace json data

--- a/src/handlebars/_wvu-masthead__links.hbs
+++ b/src/handlebars/_wvu-masthead__links.hbs
@@ -1,5 +1,5 @@
 <ul class="wvu-masthead__links">
-{{#wvu-masthead__links}}
+{{#_wvu-masthead__links.quicklinks}}
   <li><a href="{{href}}">{{text}}</a></li>
-{{/wvu-masthead__links}}
+{{/_wvu-masthead__links.quicklinks}}
 </ul>
