--- a/src/handlebars/test/index.hbs
+++ b/src/handlebars/test/index.hbs
@@ -3,9 +3,9 @@
   <head>
     <title>WVU Pattern Library - Masthead Links Module</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'>
-    {{#css}}
+    {{#_wvu-masthead__links.css}}
     <link href="{{src}}" rel="stylesheet" />
-    {{/css}}
+    {{/_wvu-masthead__links.css}}
   </head>
   <body>
     {{> handlebars/_wvu-masthead__links}}
